--- a/client/index.html
+++ b/client/index.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/favicon3.jpg" />
+  <link rel="icon" type="image/svg+xml" href="/logo_icon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="/src/index.css" rel="stylesheet">
-  <title>Instaprep By BeyondStudy</title>
+  <title>Inprep By BeyondStudy</title>
 </head>
 
 <body>
